--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,17 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_salmon_pink">#FF9C9C</color>
+    <color name="peach_schnapps">#FEDBCF</color>
+    <color name="boulder">#7B7575</color>
+    <color name="desert_storm">#F8F8F8</color>
+    <color name="oil">#221C1C</color>
+    <color name="light_grey">#D9D9D9</color>
+    <color name="topaz">#00BCD4</color>
+    <color name="light_red">#FE4747</color>
+    <color name="seashell">#F1F1F1</color>
+    <color name="carnation_pink">#FFA6D6</color>
+    <color name="deep_saffron">#FE9738</color>
+    <color name="classic_rose">#FEC3E3</color>
+    <color name="peach">#FDB777</color>
 </resources>
