--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="deep_saffron">#FE9738</color>
     <color name="classic_rose">#FEC3E3</color>
     <color name="peach">#FDB777</color>
+    <color name="green">#6CD601</color>
 </resources>
