--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,17 @@
     </style>
 
     <style name="Theme.ExpenseManagement" parent="Base.Theme.ExpenseManagement" />
+
+    <style name="CalenderViewCustom" parent="Theme.AppCompat">
+        <item name="colorControlActivated">@color/light_salmon_pink</item>
+        <item name="android:textColorPrimary">@color/black</item>
+    </style>
+
+    <style name="CalenderViewWeekCustomText" parent="android:TextAppearance.DeviceDefault.Small">
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="CalenderViewDateCustomText" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@drawable/selector_color_date</item>
+    </style>
 </resources>
