--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -67,14 +67,7 @@
                 android:layout_weight="1"
                 android:text="@string/date"
                 android:textColor="@color/black"
-                android:textSize="20sp" />
-
-            <!--            <ImageView-->
-            <!--                android:id="@+id/iv_last_day"-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="match_parent"-->
-            <!--                android:layout_gravity="center_vertical"-->
-            <!--                android:src="@drawable/round_arrow_back_ios_24" />-->
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/tv_datetime"
@@ -85,44 +78,7 @@
                 android:gravity="center"
                 android:padding="4dp"
                 android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-
-            <!--            <ImageView-->
-            <!--                android:id="@+id/iv_next_day"-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="match_parent"-->
-            <!--                android:layout_gravity="center_vertical"-->
-            <!--                android:src="@drawable/round_arrow_forward_ios_24" />-->
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal"
-            android:weightSum="4.5">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:text="@string/note"
-                android:textColor="@color/black"
-                android:textSize="20sp" />
-
-            <EditText
-                android:id="@+id/edt_note"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3.5"
-                android:background="@drawable/bg_textfield"
-                android:padding="4dp"
-                android:textColor="@color/black"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
@@ -140,7 +96,7 @@
                 android:layout_weight="1"
                 android:text="@string/amount"
                 android:textColor="@color/black"
-                android:textSize="20sp" />
+                android:textSize="18sp" />
 
             <EditText
                 android:id="@+id/edt_amount"
@@ -148,9 +104,40 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="3.5"
                 android:background="@drawable/bg_textfield"
+                android:inputType="number"
+                android:maxLines="1"
                 android:padding="4dp"
                 android:textColor="@color/black"
-                android:textSize="20sp"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal"
+            android:weightSum="4.5">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:text="@string/note"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+
+            <EditText
+                android:id="@+id/edt_note"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3.5"
+                android:background="@drawable/bg_textfield"
+                android:padding="4dp"
+                android:textColor="@color/black"
+                android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
@@ -175,10 +162,10 @@
         tools:listitem="@layout/item_category" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="300dp"
+        android:id="@+id/btn_ok"
+        android:layout_width="240dp"
         android:layout_height="44dp"
         android:layout_gravity="center_horizontal|bottom"
-        android:layout_marginVertical="16dp"
         android:background="@drawable/bg_button"
         android:text="@string/verify"
         android:textAllCaps="false"
