--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="106dp"
+    android:layout_width="wrap_content"
     android:layout_height="110dp"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_gravity="center"
-    android:layout_marginStart="10dp"
-    android:layout_marginEnd="10dp"
-    android:layout_marginBottom="16dp"
     android:background="@drawable/bg_category"
     android:orientation="vertical"
     android:paddingVertical="4dp">
 
     <ImageView
+        android:clickable="true"
         android:id="@+id/iv_category"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:src="@drawable/ic_pig" />
+        tools:src="@drawable/ic_food" />
 
     <TextView
         android:id="@+id/tv_category_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="Category"
+        android:layout_marginTop="8dp"
+        android:maxLines="1"
+        tools:text="Category"
+        android:ellipsize="end"
         android:textColor="@color/black"
         android:textSize="18sp" />
 
