--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -16,8 +16,42 @@
         android:theme="@style/CalenderViewCustom"
         android:weekDayTextAppearance="@style/CalenderViewWeekCustomText" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/list_transaction"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_from"
+            android:layout_width="0dp"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:drawableStartCompat="@drawable/ic_calendar" />
+
+        <TextView
+            android:id="@+id/tv_to"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:padding="4dp"
+            app:drawableStartCompat="@drawable/ic_calendar"/>
+    </LinearLayout>
+
+
+    <!--    <com.example.expensemanagement.ui.custom.CustomCalendarView-->
+    <!--        android:id="@+id/calendar_view"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:background="@color/white"-->
+    <!--        android:dateTextAppearance="@style/CalenderViewDateCustomText"-->
+    <!--        android:theme="@style/CalenderViewCustom"-->
+    <!--        android:weekDayTextAppearance="@style/CalenderViewWeekCustomText" />-->
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcv_list_transaction"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/item_transaction" />
 </LinearLayout>
