Add ListransactionFragment, add rcv in ChartFragment, get data from db when resume

--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -26,24 +26,43 @@
         <TextView
             android:id="@+id/tv_from"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="@drawable/bg_common"
             android:gravity="center"
-            app:drawableStartCompat="@drawable/ic_calendar" />
+            android:padding="4dp"
+            android:layout_marginEnd="8dp"
+            app:drawableStartCompat="@drawable/ic_calendar"/>
 
         <TextView
             android:id="@+id/tv_to"
+            android:background="@drawable/bg_common"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginStart="8dp"
             android:layout_weight="1"
             android:gravity="center"
             android:padding="4dp"
             app:drawableStartCompat="@drawable/ic_calendar" />
+
+        <TextView
+            android:id="@+id/tv_filter"
+            android:layout_width="wrap_content"
+            android:background="@drawable/bg_common"
+            android:backgroundTint="@color/light_salmon_pink"
+            android:text="Lọc"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:paddingHorizontal="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_height="match_parent"/>
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcv_list_transaction"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="16dp"
         tools:listitem="@layout/item_transaction" />
 </LinearLayout>
