--- a/app/src/main/res/layout/dialog_transaction_detail.xml
+++ b/app/src/main/res/layout/dialog_transaction_detail.xml
@@ -3,6 +3,7 @@
     android:layout_width="300dp"
     android:layout_height="300dp"
     android:layout_gravity="center"
+    android:backgroundTint="@color/white"
     android:orientation="vertical"
     android:padding="20dp">
 
@@ -11,29 +12,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="ajbfklasnflka"
-        android:textSize="18sp" />
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/tv_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="ajbfklasnflka"
         android:textSize="18sp" />
     <TextView
         android:id="@+id/tv_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="ajbfklasnflka"
         android:textSize="18sp" />
 
     <TextView
         android:id="@+id/tv_note"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ajbfklasnflka"
         android:textSize="18sp" />
 
 </LinearLayout>
