--- a/app/src/main/res/layout/item_category_amount.xml
+++ b/app/src/main/res/layout/item_category_amount.xml
@@ -2,16 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:gravity="center_vertical"
-    android:layout_marginBottom="4dp"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp"
+    android:gravity="start|center_vertical"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/img_category_icon"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="start"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_gravity="start|center_vertical"
         tools:src="@drawable/ic_cash" />
 
     <TextView
@@ -20,21 +20,13 @@
         android:layout_height="wrap_content"
         android:layout_gravity="start|center_vertical"
         android:layout_marginStart="8dp"
-        android:layout_weight="1.2"
+        android:layout_weight="1"
         android:gravity="center_vertical|start"
         android:maxLines="2"
         android:text="Category name"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/tv_transaction_day"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1.5"
-        android:layout_gravity="start|center_vertical"
-        android:gravity="start" />
 
     <TextView
         android:id="@+id/tv_amount"
