Add AddCategoryFragment, override onResume in HomeFragment

--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -6,6 +6,8 @@
     android:layout_gravity="center"
     android:layout_weight="1"
     android:background="@drawable/bg_category"
+    android:clickable="true"
+    android:focusable="true"
     android:orientation="vertical"
     android:paddingVertical="4dp">
 
@@ -14,7 +16,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:clickable="true"
         tools:src="@drawable/ic_food" />
 
     <TextView
