--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,8 @@
     <color name="light_salmon_pink">#FF9C9C</color>
     <color name="peach_schnapps">#FEDBCF</color>
     <color name="boulder">#7B7575</color>
-    <color name="desert_storm">#F8F8F8</color>
     <color name="oil">#221C1C</color>
-    <color name="light_grey">#D9D9D9</color>
+    <color name="light_grey">#F8F8F8</color>
     <color name="topaz">#00BCD4</color>
     <color name="light_red">#FE4747</color>
     <color name="seashell">#F1F1F1</color>
