--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -5,9 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingHorizontal="16dp"
-    android:paddingTop="16dp"
     tools:context=".ui.CalendarFragment">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/light_grey"
+        android:paddingHorizontal="8dp"
+        android:paddingVertical="4dp"
+        android:text="Lịch"
+        android:textStyle="bold"
+        android:textSize="26sp" />
 
     <CalendarView
         android:id="@+id/calendar_view"
@@ -21,26 +29,27 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingHorizontal="16dp">
 
         <TextView
             android:id="@+id/tv_from"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginEnd="8dp"
             android:layout_weight="1"
             android:background="@drawable/bg_common"
             android:gravity="center"
             android:padding="4dp"
-            android:layout_marginEnd="8dp"
-            app:drawableStartCompat="@drawable/ic_calendar"/>
+            app:drawableStartCompat="@drawable/ic_calendar" />
 
         <TextView
             android:id="@+id/tv_to"
-            android:background="@drawable/bg_common"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginStart="8dp"
             android:layout_weight="1"
+            android:background="@drawable/bg_common"
             android:gravity="center"
             android:padding="4dp"
             app:drawableStartCompat="@drawable/ic_calendar" />
@@ -48,15 +57,15 @@
         <TextView
             android:id="@+id/tv_filter"
             android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="8dp"
             android:background="@drawable/bg_common"
             android:backgroundTint="@color/light_salmon_pink"
-            android:text="Lọc"
             android:gravity="center"
-            android:textStyle="bold"
-            android:textColor="@color/white"
             android:paddingHorizontal="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_height="match_parent"/>
+            android:text="Lọc"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -64,5 +73,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="16dp"
+        android:paddingHorizontal="16dp"
         tools:listitem="@layout/item_transaction" />
 </LinearLayout>
