--- a/app/src/main/res/layout/fragment_list_transaction.xml
+++ b/app/src/main/res/layout/fragment_list_transaction.xml
@@ -8,9 +8,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:background="@color/light_grey"
         android:gravity="center_vertical"
+        android:layout_marginBottom="10dp"
+        android:paddingVertical="4dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -23,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/giao_dich"
+            android:textStyle="bold"
             android:textSize="26sp" />
     </LinearLayout>
 
